First check-in of C# project Cozy Coworking

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Cozy_Coworking/bin/Debug
+/Cozy_Coworking/obj/Debug
